[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/2d/office.jpg" type="Texture" id=1]
[ext_resource path="res://scripts/Clickable.gd" type="Script" id=2]
[ext_resource path="res://scenes/Office.gd" type="Script" id=3]

[node name="Scene" type="Node2D"]
script = ExtResource( 3 )

[node name="Objects" type="Node2D" parent="."]

[node name="Upstairs" type="Button" parent="Objects"]
margin_left = 3.0
margin_top = 512.0
margin_right = 1083.0
margin_bottom = 711.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Window" type="Button" parent="Objects"]
margin_left = 703.149
margin_top = 20.075
margin_right = 918.149
margin_bottom = 347.075
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desk" type="Button" parent="Objects"]
margin_left = 153.0
margin_top = 342.0
margin_right = 597.0
margin_bottom = 485.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Office_Background" type="Sprite" parent="."]
position = Vector2( 536.361, 240.001 )
scale = Vector2( 0.32, 0.28 )
texture = ExtResource( 1 )
[connection signal="pressed" from="Objects/Upstairs" to="." method="_on_Upstairs_pressed"]
[connection signal="pressed" from="Objects/Window" to="." method="_on_Window_pressed"]
[connection signal="pressed" from="Objects/Desk" to="." method="_on_Desk_pressed"]
